# db-benchmark-rust

./: Cargo.toml  README.md  times
.devcontainer/: Dockerfile
benches/: Readme.md  tables.rs
src/: data.rs  lib.rs  main.rs  table.rs
src/column/: column_table.rs  mod.rs
src/filters/: eq.rs  ge.rs  le.rs  mod.rs
src/pax/: paxTable.rs
src/row/: mod.rs  row_table.rs
src/tables/: column_table.rs  mod.rs  row_table.rs
src/tables/column/: mod.rs  scalar.rs  table.rs  vectorised.rs
src/tables/row/: mod.rs  scalar.rs  table.rs  vectorised.rs
