cargo-features = ["profile-rustflags"]

[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.1"
log = "0.4.17"
pprof = { version = "0.10.0", features = ["flamegraph"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.10.0", features = ["criterion", "flamegraph"] }
rand = "0.8.5"

[[bench]]
name = "tables"
harness = false

[profile.dev]
rustflags = ["-C", "no-vectorize-loops", "-C", "no-vectorize-slp"]
